# tcptracer-bpf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile-nettop  Gopkg.toml  Makefile  README.md  Vagrantfile  bootstrap.sh  bpf_helpers.h  ebpf.mk  get-linux-headers.sh  go.mod  go.sum  run_gitlab_local.sh  tcptracer-bpf.c  tcptracer-bpf.h  tcptracer-maps.h  tcptracer.code-workspace
.circleci/: config.yml  run-build-locally.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
agent/: main.go  tracer.go
agent/config/: config.go  ini_config.go  log.go  log_test.go  yaml_config.go
agent/net/: uds.go
cmd/: agent_linux.go  agent_windows.go
cmd/agent/: agent_linux.go  agent_windows.go
cmd/netstat/: nettop.go
cmd/nettop/: nettop.go
pkg/: build_ddagent_release.sh
pkg/tracer/: common.go  common_test.go  config.go  ebpf_bytes_match_linux_test.go  ebpf_bytes_match_test.go  event.go  event_common.go  event_common_easyjson.go  event_linux.go  event_linux_test.go  event_test.go  net-listener.go  offsetguess.go  offsetguess_linux.go  offsetguess_linux_test.go  offsetguess_unsupported.go  seelog-tests.xml  tcptracer-ebpf.go  test_common.go  testdata.txt  tracepipe_log.go  tracer.go  tracer_cb.go  tracer_linux.go  tracer_linux_test.go  tracer_test.go  tracer_unsupported.go  tracer_unsupported_test.go  tracer_windows.go  tracer_windows_test.go
pkg/tracer/collector/: collector.go  netstat_collection_windows_test.go  (+2 more)
tests/: Dockerfile  Dockerfile-nettop  Makefile  nettop.go  trace_test.go  tracer.go
tools/: build_ddagent_release.sh
(+26 files in other folders)
